test/good/t0079.ls
(* Hybrid function call with more than one zero-crossing inside a reset *)

let hybrid f y = x where
  der x = 1.0 init 0.0 reset (up(y)) -> 2.0
                           | (up(y)) -> 3.0

let hybrid main z = x where
  reset
    x = f(1.0)
  every z 


